test_inputs/invalid/16_python_indentation_style.mt
@triton.jit
def py_style(x):
    y = x + 1;
